# qtremoteobject-ipc-demo

./: CMakeLists.txt  demo.rep
child/: CMakeLists.txt  Demo.cpp  Demo.h  main.cpp
parent/: CMakeLists.txt  main.cpp
